fix: display improvements: semi-opacity toolbar, song padding, overflow hidden

--- a/assets/components/SongItem.scss
+++ b/assets/components/SongItem.scss
@@ -53,6 +53,10 @@
       margin: 1.5rem;
       border-color: var(--bg-hover);
     }
+
+    .song-text {
+      padding-top: 1px;
+    }
   }
   &.active .song-item__content {
     @media (min-width: 1200px) {
@@ -103,6 +107,7 @@
   }
 
   &__line_chords {
+    overflow: hidden;
     .chord_known .el-button {
       color: #999;
       border: none;
